--- a/wercker.yml
+++ b/wercker.yml
@@ -144,6 +144,21 @@ build:
                     GORM_DIALECT=postgres GORM_DSN="host=postgres93 user=gorm password=gorm DB.name=gorm port=5432 sslmode=disable" go test ./...
 
         - script:
+                name: test pgx95
+                code: |
+                    GORM_DIALECT=pgx GORM_DSN="host=postgres95 user=gorm password=gorm DB.name=gorm port=5432 sslmode=disable" go test ./...
+
+        - script:
+                name: test pgx94
+                code: |
+                    GORM_DIALECT=pgx GORM_DSN="host=postgres94 user=gorm password=gorm DB.name=gorm port=5432 sslmode=disable" go test ./...
+
+        - script:
+                name: test pgx93
+                code: |
+                    GORM_DIALECT=pgx GORM_DSN="host=postgres93 user=gorm password=gorm DB.name=gorm port=5432 sslmode=disable" go test ./...
+
+        - script:
                 name: test mssql
                 code: |
                     GORM_DIALECT=mssql GORM_DSN="sqlserver://gorm:LoremIpsum86@mssql:1433?database=gorm" go test ./...
