Overriding the package dir in a setup-go-workspace step for test to run on the right implementation.

--- a/wercker.yml
+++ b/wercker.yml
@@ -75,7 +75,8 @@ build:
     steps:
         # Sets the go workspace and places you package
         # at the right place in the workspace tree
-        - setup-go-workspace
+        - wercker/setup-go-workspace:
+          package-dir: github.com/jinzhu/gorm
 
         # Gets the dependencies
         - script:
