remove mssql testing

--- a/wercker.yml
+++ b/wercker.yml
@@ -158,7 +158,7 @@ build:
                 code: |
                     GORM_DIALECT=pgx GORM_DSN="host=postgres93 user=gorm password=gorm DB.name=gorm port=5432 sslmode=disable" go test ./...
 
-        - script:
-                name: test mssql
-                code: |
-                    GORM_DIALECT=mssql GORM_DSN="sqlserver://gorm:LoremIpsum86@mssql:1433?database=gorm" go test ./...
+#        - script:
+#                name: test mssql
+#                code: |
+#                    GORM_DIALECT=mssql GORM_DSN="sqlserver://gorm:LoremIpsum86@mssql:1433?database=gorm" go test ./...
